# Directioner

./: .env.example  .gitignore  CMakeLists.txt  CMakePresets.json  CONTEXT.md  Dockerfile  Dockerfile.gpu  Makefile  PROGRESS.md  README.md  TODO.md  docker-compose.yml  pyproject.toml  requirements-dev.txt  requirements-voice.txt  requirements.txt  run.py  run.sh
configs/: app.example.yaml  app.production.example.yaml  discord.example.yaml  logging.example.yaml  models.example.yaml  prometheus.yml  supabase_schema.sql
configs/grafana/provisioning/dashboards/: dashboards.yml  directioner.json
configs/grafana/provisioning/datasources/: datasources.yml
docs/: ARCHITECTURE.md  BUILDING.md  CONTEXT_MANAGEMENT.md  DEPLOYMENT.md  FILE_STRUCTURE.md  OPERATIONS.md  PIPELINES.md  SHARED_MEMORY_PROTOCOL.md
docs/adr/: 0001-cpp-python-boundary.md
k8s/: configmap.yaml  deployment.yaml  namespace.yaml  service-account.yaml  service.yaml
native/: CMakeLists.txt
native/directioner_native/: CMakeLists.txt
native/directioner_native/bindings/: module.cpp
native/directioner_native/include/directioner_native/audio/: frame.hpp  processing_engine.hpp
native/directioner_native/include/directioner_native/discord/: voice_gateway.hpp
native/directioner_native/include/directioner_native/runtime/: build_info.hpp  worker_pool.hpp
native/directioner_native/include/directioner_native/shared_memory/: channel.hpp  mapped_region.hpp  spsc_ring_buffer.hpp
native/directioner_native/src/audio/: processing_engine.cpp
native/directioner_native/src/discord/: voice_gateway.cpp
native/directioner_native/src/runtime/: worker_pool.cpp
native/directioner_native/src/shared_memory/: mapped_region.cpp  spsc_ring_buffer.cpp
native/directioner_native/tests/: audio_processing_engine_test.cpp  spsc_ring_buffer_test.cpp  worker_pool_test.cpp
native/directioner_native/tools/: dpp_probe.cpp  dpp_runtime_main.cpp
native/rust/: Cargo.toml  build.rs
native/rust/src/: build_info.rs  discord.rs  lib.rs  shared_memory.rs
scripts/: build-native.ps1  dpp-probe.ps1  run-discord.ps1  run-with-checks.ps1  run.bat  run.sh  setup.bat  setup.sh  start.ps1  test.ps1
src/directioner/: __init__.py  _native.py  app.py  native.py
src/directioner/audio/: __init__.py  cleanup.py  frames.py  native_audio.py  native_shared_memory.py  pcm_codec.py  shared_memory.py  vad.py  voice_input.py  voice_output.py  voice_output_pipeline.py  voice_pipeline.py  wakeword.py
src/directioner/config/: __init__.py  settings.py
src/directioner/conversation/: __init__.py  context.py  events.py  identity.py  manager.py  router.py  state.py  summarizer.py
src/directioner/database/: __init__.py  supabase_client.py
src/directioner/diarization/: __init__.py  service.py
src/directioner/discord/: __init__.py  chat_formatter.py  chat_gateway.py  chat_output.py  dpp_runtime.py  event_pump.py  slash_commands.py  standalone_process.py
src/directioner/intent/: __init__.py  planner.py
src/directioner/llm/: __init__.py  client.py
src/directioner/memory/: __init__.py  embedding_store.py  store.py
src/directioner/monitoring/: __init__.py  logging.py  metrics.py  performance.py  pipeline_metrics.py
src/directioner/orchestrator/: __init__.py  pipecat_pipeline.py
src/directioner/response/: __init__.py  processing.py  router.py  streaming.py
src/directioner/security/: __init__.py
src/directioner/streaming/: __init__.py  latency.py  response_cache.py  ultra_fast.py
src/directioner/stt/: __init__.py  parakeet_stream.py
src/directioner/text/: __init__.py  cleanup.py
src/directioner/tools/: __init__.py  calculator.py  calendar.py  discord_actions.py  filesystem.py  persona.py  registry.py  user_preferences.py  weather.py  web_search.py
src/directioner/tts/: __init__.py  chatterbox_stream.py
supabase/migrations/: 0001_create_memory_tables.sql
tests/benchmarks/: test_performance.py
tests/contracts/: test_pcm_frame_abi.py  test_shared_memory_channels.py
tests/integration/: test_discord.py  test_full_pipeline.py  test_reconnect.py
tests/load/: locustfile.py
tests/unit/: test_app_cli.py  test_calculator_tool.py  test_calendar_tool.py  test_chat_formatter.py  test_chat_stream_buffer.py  test_context_manager.py  test_discord_action_tools.py  test_dpp_event_pump.py  test_embedding_store.py  test_identity.py  test_llm_client.py  test_memory_store.py  test_pcm_codec.py  test_persona.py  test_pipecat_pipeline.py  test_pipeline_metrics.py  test_planner.py  test_response_router.py  test_scaling.py  test_settings.py  test_standalone_dpp_process.py  test_summarizer.py  test_text_cleanup.py  test_vad.py  test_voice_output_pipeline.py  test_voice_pipeline.py  test_wakeword.py  test_weather_tool.py  test_web_search_tool.py
