[build-system]
requires = [
  "scikit-build-core>=0.10",
  "nanobind>=2.0",
  "cmake>=3.26",
  "ninja"
]
build-backend = "scikit_build_core.build"

[project]
name = "directioner"
version = "0.1.0"
description = "Real-time Discord voice and text AI system using Python, C++, nanobind, DPP, and shared memory."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "Proprietary" }
authors = [
  { name = "Directioner Contributors" }
]
dependencies = [
  "anyio>=4",
  "groq>=0.9",
  "numpy>=1.26",
  "pydantic>=2",
  "pydantic-settings>=2",
  "PyYAML>=6",
  "structlog>=24",
  "supabase>=2",
  "torch>=2.2",
  "typing-extensions>=4.10"
]

[project.optional-dependencies]
ai = [
  "pipecat-ai>=0.0.80"
]
voice = [
  "nemo_toolkit[asr]>=1.23",
  "chatterbox-tts>=0.1",
  "openwakeword>=0.6"
]
dev = [
  "pytest>=8",
  "pytest-asyncio>=0.23",
  "ruff>=0.6",
  "mypy>=1.10"
]

[project.scripts]
directioner = "directioner.app:main"

[tool.scikit-build]
cmake.version = ">=3.26"
wheel.packages = ["src/directioner"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "ASYNC"]

[tool.mypy]
python_version = "3.11"
strict = true
packages = ["directioner"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
