[build-system]
requires = ["maturin>=1.5"]
build-backend = "maturin"

[project]
name = "directioner"
version = "0.1.0"
description = "Real-time Discord text AI system using Python, Rust, and PyO3. Voice functionality is disabled."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "Proprietary" }
authors = [
  { name = "Directioner Contributors" }
]
dependencies = [
  "anyio>=4",
  "groq>=0.9",
  "numpy>=1.26",
  "pydantic>=2",
  "pydantic-settings>=2",
  "PyYAML>=6",
  "structlog>=24",
  "supabase>=2",
  "torch>=2.2",
  "typing-extensions>=4.10"
]

[project.optional-dependencies]
ai = [
  "pipecat-ai>=0.0.80"
]
dev = [
  "pytest>=8",
  "pytest-asyncio>=0.23",
  "ruff>=0.6",
  "mypy>=1.10"
]

[project.scripts]
directioner = "directioner.app:main"

[tool.maturin]
manifest-path = "native/rust/Cargo.toml"
package-dir = "native/rust"
features = ["pyo3/extension-module"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "ASYNC"]

[tool.mypy]
python_version = "3.11"
strict = true
packages = ["directioner"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
